// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-entity-field Renders \`c-entity-field\` with array value 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field v-text-field v-select v-select--chips v-select--chips--small v-autocomplete v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light primary--text"
  items="[object Object],[object Object],[object Object]"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label v-label--active theme--light primary--text"
          style="left: 0px; position: absolute;"
        >
          Entity
        </label>
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip c-lazy-search-field__chip v-chip--small v-chip--removable theme--light"
            tabindex="0"
          >
            <span
              class="v-chip__content"
            >
              <span
                class="ellipsis"
              >
                Text
              </span>
              <div
                class="v-chip__close"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  cancel
                </i>
              </div>
            </span>
          </span>
          <span
            class="v-chip c-lazy-search-field__chip v-chip--small v-chip--removable theme--light"
            tabindex="0"
          >
            <span
              class="v-chip__content"
            >
              <span
                class="ellipsis"
              >
                Text 2
              </span>
              <div
                class="v-chip__close"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  cancel
                </i>
              </div>
            </span>
          </span>
          <span
            class="v-chip c-lazy-search-field__chip v-chip--small v-chip--removable theme--light"
            tabindex="0"
          >
            <span
              class="v-chip__content"
            >
              <span
                class="ellipsis"
              >
                Text 3
              </span>
              <div
                class="v-chip__close"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  cancel
                </i>
              </div>
            </span>
          </span>
          <input
            aria-label="Entity"
            autocomplete="off"
            name="entities"
            role="combobox"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with array value 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            Text
          </div>
          <span
            class="ml-4 grey--text"
          >
            type1
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            Text 2
          </div>
          <span
            class="ml-4 grey--text"
          >
            type2
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            Text 3
          </div>
          <span
            class="ml-4 grey--text"
          >
            type3
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field__append"
      />
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with custom props 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field v-text-field v-select v-autocomplete v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light primary--text"
  items="[object Object],[object Object],[object Object]"
  loading="true"
  search="Text 2"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label v-label--active theme--light primary--text"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <input
          aria-label="Custom label"
          autocomplete="off"
          name="customName"
          role="combobox"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            Text
          </div>
          <span
            class="ml-4 grey--text"
          >
            type1
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            Text 2
          </div>
          <span
            class="ml-4 grey--text"
          >
            type2
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            Text 3
          </div>
          <span
            class="ml-4 grey--text"
          >
            type3
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field__append"
      />
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with default props 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field v-text-field v-select v-autocomplete v-input--is-focused theme--light primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label v-label--active theme--light primary--text"
          style="left: 0px; position: absolute;"
        >
          Entity
        </label>
        <input
          aria-label="Entity"
          autocomplete="off"
          name="entities"
          role="combobox"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            id
          </div>
          <span
            class="ml-4 grey--text"
          >
            type1
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            id 2
          </div>
          <span
            class="ml-4 grey--text"
          >
            type2
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field--tile"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            id 3
          </div>
          <span
            class="ml-4 grey--text"
          >
            type3
          </span>
        </a>
      </div>
      <div
        class="c-lazy-search-field__append"
      />
    </div>
  </div>
</div>
`;
